// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Radio Default 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 jGJZfM"
  width="auto"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        <input
          className="Radio__Input-sc-1qc8m3x-2 knFFza"
          name="example"
          type="radio"
          value="green"
        />
        <div
          className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
        />
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Radio Disabled 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Disabled
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Checked
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 jGJZfM"
          width="auto"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                <input
                  className="Radio__Input-sc-1qc8m3x-2 knFFza"
                  defaultChecked={true}
                  disabled={true}
                  name="example"
                  type="radio"
                  value="green"
                />
                <div
                  className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
                />
                <span
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ecXtkX Radio__Label-sc-1qc8m3x-3 btXBZP"
                >
                  Green
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Not Checked
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 jGJZfM"
          width="auto"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                <input
                  className="Radio__Input-sc-1qc8m3x-2 knFFza"
                  disabled={true}
                  name="example"
                  type="radio"
                  value="blue"
                />
                <div
                  className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
                />
                <span
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ecXtkX Radio__Label-sc-1qc8m3x-3 btXBZP"
                >
                  Blue
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Radio In a group 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <fieldset
    className="Fieldset__StyledFieldset-sc-1fwvu26-0 GQPdY"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
    >
      <legend
        className="NormalizedLegend__Legend-sc-1svgb20-0 Legend__StyledLegendAsLabel-x6z4g1-1 jtzsJR FormLabel__StyledLabel-skax1c-0 VHIlu"
        hidden={false}
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          Colors 
        </span>
      </legend>
    </div>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hEIiGr"
    >
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Radio__Input-sc-1qc8m3x-2 knFFza"
                name="example"
                type="radio"
                value="green"
              />
              <div
                className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
              />
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
              >
                Green
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Radio__Input-sc-1qc8m3x-2 knFFza"
                name="example"
                type="radio"
                value="blue"
              />
              <div
                className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
              />
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
              >
                Blue
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Radio__Input-sc-1qc8m3x-2 knFFza"
                name="example"
                type="radio"
                value="yellow"
              />
              <div
                className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
              />
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
              >
                Yellow
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Molecules | Input / Radio In a group with error 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 kMOuNd"
>
  <fieldset
    className="Fieldset__StyledFieldset-sc-1fwvu26-0 GQPdY"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
    >
      <legend
        className="NormalizedLegend__Legend-sc-1svgb20-0 Legend__StyledLegendAsLabel-x6z4g1-1 jtzsJR FormLabel__StyledLabel-skax1c-0 VHIlu"
        hidden={false}
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          Colors 
        </span>
      </legend>
    </div>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hEIiGr"
    >
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Radio__Input-sc-1qc8m3x-2 dBXMrp"
                name="example"
                onChange={[Function]}
                required={true}
                type="radio"
                value="green"
              />
              <div
                className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
              />
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
              >
                Green
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Radio__Input-sc-1qc8m3x-2 dBXMrp"
                name="example"
                onChange={[Function]}
                required={true}
                type="radio"
                value="blue"
              />
              <div
                className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
              />
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
              >
                Blue
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="FormField__Wrapper-ydn0fr-0 jGJZfM"
        width="auto"
      >
        <label
          className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
          hidden={false}
        >
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
          >
            <div
              className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
            >
              <input
                className="Radio__Input-sc-1qc8m3x-2 dBXMrp"
                name="example"
                onChange={[Function]}
                required={true}
                type="radio"
                value="yellow"
              />
              <div
                className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
              />
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
              >
                Yellow
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
  </fieldset>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      This field is required
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Radio Required 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Required
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        Default (without star)
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 jGJZfM"
          width="auto"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                <input
                  className="Radio__Input-sc-1qc8m3x-2 knFFza"
                  name="example"
                  required={true}
                  type="radio"
                  value="green"
                />
                <div
                  className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
                />
                <span
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
                >
                  Green
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        With star
      </div>
      <div>
        <div
          className="FormField__Wrapper-ydn0fr-0 jGJZfM"
          width="auto"
        >
          <label
            className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
            hidden={false}
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
            >
              <div
                className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
              >
                <input
                  className="Radio__Input-sc-1qc8m3x-2 knFFza"
                  name="example"
                  required={true}
                  type="radio"
                  value="green"
                />
                <div
                  className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
                />
                <span
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
                >
                  Green *
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Input / Radio With all actions 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 jGJZfM"
  width="auto"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        <input
          className="Radio__Input-sc-1qc8m3x-2 knFFza"
          name="example6"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="green"
        />
        <div
          className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
        />
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Radio With an error if not checked 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 jGJZfM"
  width="auto"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        <input
          className="Radio__Input-sc-1qc8m3x-2 dBXMrp"
          name="example"
          onChange={[Function]}
          required={true}
          type="radio"
          value="green"
        />
        <div
          className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
        />
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
        >
          Green
        </span>
      </div>
    </span>
  </label>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hPnwKK"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        Error: 
      </div>
      This field is required
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Radio With auto focus 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 jGJZfM"
  width="auto"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        <input
          autoFocus={true}
          className="Radio__Input-sc-1qc8m3x-2 knFFza"
          name="example"
          type="radio"
          value="green"
        />
        <div
          className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
        />
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules | Input / Radio With checked (Controlled behaviour) 1`] = `
Array [
  <div
    className="FormField__Wrapper-ydn0fr-0 jGJZfM"
    width="auto"
  >
    <label
      className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
      hidden={false}
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
        >
          <input
            checked={false}
            className="Radio__Input-sc-1qc8m3x-2 knFFza"
            name="example"
            onChange={[Function]}
            type="radio"
            value="green"
          />
          <div
            className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
          />
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
          >
            Green
          </span>
        </div>
      </span>
    </label>
  </div>,
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle Checkbox
  </button>,
]
`;

exports[`Storyshots Molecules | Input / Radio With default checked 1`] = `
<div
  className="FormField__Wrapper-ydn0fr-0 jGJZfM"
  width="auto"
>
  <label
    className="FormLabel__StyledLabel-skax1c-0 VHIlu Radio__StyledFormLabel-sc-1qc8m3x-1 kweFKd"
    hidden={false}
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jaAqWg"
      >
        <input
          className="Radio__Input-sc-1qc8m3x-2 knFFza"
          defaultChecked={true}
          name="example"
          type="radio"
          value="green"
        />
        <div
          className="Radio__Circle-sc-1qc8m3x-0 kBuwpJ"
        />
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ Radio__Label-sc-1qc8m3x-3 btXBZP"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;
